--- a/crm/accounts/templates/accounts/navbar.html
+++ b/crm/accounts/templates/accounts/navbar.html
@@ -13,6 +13,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Products</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Customers</a>
+        </li>
       </ul>
     </div>
   </nav>
