--- a/crm/accounts/templates/accounts/products.html
+++ b/crm/accounts/templates/accounts/products.html
@@ -16,7 +16,16 @@
 					<th>Product</th>
 					<th>Category</th>
 					<th>Price</th>
-				</tr>						
+				</tr>
+
+				{% for i in products %}
+					<tr>
+						<td>{{i.name}}</td>
+						<td>{{i.category}}</td>
+						<td>{{i.price}}</td>
+					</tr>
+				{% endfor %}
+				
 			</table>
 		</div>
 	</div>
