--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -16,12 +16,14 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
+					<td></td>
 					<th>Customer</th>
 					<th>Phone</th>
 				</tr>
 
 				{% for customer in customers %}
 				<tr>
+					<td><a class="btn bt-sm btn-info" href="{% url 'customer_url_name' customer.id %}">View</a></td>
 					<td>{{customer.name}}</td>
 					<td>{{customer.phone}}</td>
 				</tr>
@@ -50,8 +52,8 @@
 					<td>{{order.product}}</td>
 					<td>{{order.date_created}}</td>
 					<td>{{order.status}}</td>
-					<td><a href="">Update</a></td>
-					<td><a href="">Delete</a></td>
+					<td><a class="btn bt-sm btn-info" href="">Update</a></td>
+					<td><a class="btn bt-sm btn-danger" href="">Delete</a></td>
 				</tr>
 				{% endfor %}
 		
