--- a/crm/accounts/templates/accounts/navbar.html
+++ b/crm/accounts/templates/accounts/navbar.html
@@ -8,13 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Dashboard</a>
+          <a class="nav-link" href="{% url 'home_url_name' %}">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Customers</a>
+          <a class="nav-link" href="{% url 'product_url_name' %}">Products</a>
         </li>
       </ul>
     </div>
