--- a/crm/accounts/templates/accounts/order_form.html
+++ b/crm/accounts/templates/accounts/order_form.html
@@ -9,7 +9,12 @@
 		<div class="card card-body">
             <form action="" method="POST">
                 {% csrf_token %}
-                {{form}}
+                {{ formset.management_form }}
+                {% for form in formset %}
+                    {{form}}
+                    <hr>
+                {% endfor %}
+
                 <input class="btn bt-sm btn-info" type="submit" name="submit">
             </form>
 		</div>
