--- a/crm/accounts/templates/accounts/customers.html
+++ b/crm/accounts/templates/accounts/customers.html
@@ -41,9 +41,11 @@
 	<div class="col">
 		<div class="card card-body">
 			<form method="get">
-
-		    <button class="btn btn-primary" type="submit">Search</button>
-		  </form>
+				<hr>
+				{{my_filter.form}}
+				<!-- <hr> -->
+		    	<button class="btn btn-primary" type="submit">Search</button>
+		  	</form>
 		</div>
 	</div>
 	
@@ -56,6 +58,7 @@
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
+					<th>Note</th>
 					<th>Category</th>
 					<th>Date Orderd</th>
 					<th>Status</th>
@@ -66,6 +69,7 @@
 				{% for order in orders %}
 				<tr>
 					<td>{{order.product}}</td>
+					<td>{{order.note}}</td>
 					<td>{{order.product.category}}</td>
 					<td>{{order.date_created}}</td>
 					<td>{{order.status}}</td>
